<resources>
    <string name="app_name">Tasker</string>
    <string name="new_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_description">Task Description</string>
    <string name="save_task">Save Task</string>
    <string name="add_new_task">Add New Task</string>
    <string name="loading">Loading</string>
    <string name="update_task">Update Task</string>
    <string name="save_updates">Save Updates</string>
    <string name="title">Title</string>
    <string name="date">Date</string>
    <string name="description">Description</string>
</resources>