<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="6dp"
    android:layout_marginEnd="6dp"
    android:layout_marginTop="6dp"
    android:layout_marginBottom="6dp"
    android:foreground="?attr/selectableItemBackground"
    app:cardBackgroundColor="@color/field_green"
    app:cardElevation="8dp">

    <!-- Content Layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <!-- Title Text -->
        <TextView
            android:id="@+id/titleTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:textColor="@color/dark_blue"
            android:textSize="20sp"
            android:textStyle="bold"
            android:layout_marginBottom="8dp"/>

        <!-- Description Text -->
        <TextView
            android:id="@+id/descrTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/description"
            android:textColor="@color/blue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginBottom="6dp" />

        <!-- Date Text -->
        <TextView
            android:id="@+id/dateTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:textSize="18sp"
            android:textColor="@color/gray"
            android:layout_marginBottom="8dp" />

        <!-- Edit and Delete Icons -->
        <LinearLayout
            android:id="@+id/editDeleteL"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Edit Button -->
            <ImageView
                android:id="@+id/editImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/baseline_border_color_24"
                android:layout_marginEnd="16dp" />

            <!-- Delete Button -->
            <ImageView
                android:id="@+id/deleteImg"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_delete" />
        </LinearLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
